cli/tests/snapshot/inputs/errors/value_contract_violation.ncl
# capture = 'stderr'
# command = ['eval']
{ foo | std.FailWith "no reason" = 1 }.foo

